# pronuclei_extraction

./: .gitignore  README.md  hello.py  pyproject.toml
agent_simulation/: agent_init.ipynb  fluid_simul.py
agent_simulation/src/: event_models.py  models.py
cellforge/: agent_init.ipynb  example_bounce.usd  example_rigid_soft_contact.usd  example_soft_body_in_fluid.usd  example_sph_falling_into_sphere.usd  example_sph_inverted.usd  example_sph_inverted_sphere.usd
cellforge/segmentation/: attention_unet.py  complete_pronuclei_train.py  extract_frames_from_sqlite.py  extract_masks.ipynb  find_large_blastocysts.ipynb  init_notebook mice.ipynb  init_notebook_pn_seg.ipynb  pronuclei_areas_eda.ipynb  pronuclei_areas_eda_copy.ipynb  pronuclei_areas_eda_copy.py  pronuclei_inference.py  train_unet.py  visual_inference.py  zp_segmentation.ipynb
cellforge/segmentation/notebooks/: accumulated_pn_area_sample0_multilabel.avi  accumulated_pn_area_sample1_multilabel.avi  accumulated_pn_area_sample2_multilabel.avi  (+10 more)
cellforge/src/: config.py
notebooks/: PoC 2.ipynb  PoC o1.ipynb  PoC2.ipynb  balloon_stuff.ipynb  blastocyst_prediction.ipynb  cleavaga_simulation.ipynb  example_rigid_soft_contact.usd  lgbm_binary.ipynb  new_poc.ipynb  renderer.ipynb  sample_timelapse_data.csv  simple_model.ipynb  starting_notebook.ipynb  wrap.ipynb
notebooks/agent_simulation/: simul_wrap.py
src/: maastricht_inference.py
src/notebooks_pn/: euploid_research.ipynb  euploid_research_what.ipynb
src/segmentation/: init_notebook mice.ipynb  unet.py
src/segmentation_utils/: dataloader.py
(+12 files in other folders)
